feat(api): change recommendations algorithm to SVD
