# api/docs/swagger.json
@@ -68,16 +68,17 @@
                 "summary": "Get movies recommendations",
                 "parameters": [
                     {
-                        "description": "user ratings",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.AnonymousMovieRating"
-                            }
-                        }
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "userId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "query limit",
+                        "name": "limit",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -159,17 +160,6 @@
         }
     },
     "definitions": {
-        "models.AnonymousMovieRating": {
-            "type": "object",
-            "properties": {
-                "movie_id": {
-                    "type": "integer"
-                },
-                "rating": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.CastDTO": {
             "type": "object",
             "properties": {
